--- a/index.html
+++ b/index.html
@@ -2,34 +2,30 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Danh sách với Tìm kiếm & Lọc</title>
-    <!-- Link tới file CSS riêng -->
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Danh sách với Tìm kiếm & Lọc</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Đóng gói list trong container riêng để tránh xung đột -->
-    <div id="list-lh" class="container">
-        <h1>Danh sách Sản phẩm</h1>
-        <div id="controls-lh">
-            <select id="category-filter-lh">
-                <option value="all">Tất cả</option>
-                <option value="Fruit">Trái cây</option>
-                <option value="Vegetable">Rau củ</option>
-                <option value="Dairy">Sản phẩm sữa</option>
-                <option value="Bakery">Bánh mì</option>
-                <option value="Beverage">Đồ uống</option>
-                <option value="Meat">Thịt cá</option>
-                <option value="Snacks">Đồ ăn nhẹ</option>
-                <option value="Frozen">Đông lạnh</option>
-                <option value="Produce">Nông sản</option>
-                <option value="Seafood">Hải sản</option>
-            </select>
-            <input type="text" id="search-lh" placeholder="Tìm kiếm...">
-        </div>
-        <ul id="itemList_LH"></ul>
+  <div id="list-lh" class="container">
+    <h1>Thư Viện Ebook</h1>
+    <div id="controls-lh">
+      <select id="category-filter-lh">
+        <option value="all">Tất cả</option>
+        <option value="KiemHiep">Kiếm Hiệp</option>
+        <option value="TrinhTham">Trinh Thám</option>
+        <option value="LinhDi">Linh Dị</option>
+        <option value="XuyenKhong">Xuyên Không</option>
+        <option value="TamLyHoc">Tâm Lý Học</option>
+        <option value="KyNangSong">Kỹ Năng Sống</option>
+        <option value="QuanTri">Quản Trị</option>
+        <option value="KinhTeTaiChinh">Kinh Tế - Tài Chính</option>
+      </select>
+      <input type="text" id="search-lh" placeholder="Tìm kiếm theo tên hoặc thể loại...">
     </div>
-    <script src="script.js"></script>
+    <ul id="itemList_LH"></ul>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
