--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <option value="KyNangSong">Kỹ Năng Sống</option>
         <option value="QuanTri">Quản Trị</option>
         <option value="KinhTeTaiChinh">Kinh Tế - Tài Chính</option>
+        <option value="VienTuong">Viễn Tưởng</option>
       </select>
       <input type="text" id="search-lh" placeholder="Tìm kiếm theo tên hoặc thể loại...">
     </div>
