--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </div>
     <ul id="itemList_LH"></ul>
   </div>
+  <div style="text-align: center;"><iframe 100="" class="adpia-smart-banner" height="90" max-width:="" src="https://smartlink.adpia.vn/adpia-banner.php?width=728&amp;height=90&amp;cate=B&amp;a_id=A100116734&amp;u_id=" style="border: none;" width="728"></iframe><script>window.addEventListener("DOMContentLoaded",function(){let t=document.getElementsByClassName("adpia-smart-banner")[0];t.offsetWidth<t.width&&(t.style.height=t.height*t.offsetWidth/t.width+"px")});</script></div>
   <script src="script.js"></script>
 </body>
 </html>
