--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Danh sách với Tìm kiếm & Lọc</title>
   <link rel="stylesheet" href="styles.css">
+  <script type="text/javascript">
+    var link4m_url = 'https://link4m.co/';
+    var link4m_api_token = '6751046db26053200e3c0bbf';
+    var link4m_advert = 2;
+    var link4m_domains = ['drive.google.com', 'uploading.com', 'uploadable.ch'];
+  </script>
+  <script src='//link4m.co/js/full-script.js'></script>
 </head>
 <body>
   <div style="text-align: center;"><iframe 100="" class="adpia-smart-banner" height="90" max-width:="" src="https://smartlink.adpia.vn/adpia-banner.php?width=728&amp;height=90&amp;cate=B&amp;a_id=A100116734&amp;u_id=" style="border: none;" width="728"></iframe><script>window.addEventListener("DOMContentLoaded",function(){let t=document.getElementsByClassName("adpia-smart-banner")[0];t.offsetWidth<t.width&&(t.style.height=t.height*t.offsetWidth/t.width+"px")});</script></div>
