--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -18,6 +17,7 @@
         <option value="LinhDi">Linh Dị</option>
         <option value="XuyenKhong">Xuyên Không</option>
         <option value="TamLyHoc">Tâm Lý Học</option>
+		<option value="TieuThuyet">Tiểu Thuyết</option>
         <option value="KyNangSong">Kỹ Năng Sống</option>
         <option value="QuanTri">Quản Trị</option>
         <option value="KinhTeTaiChinh">Kinh Tế - Tài Chính</option>
@@ -30,4 +30,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
